syntax = "proto3";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ds.mysmartfitness";
option java_outer_classname = "SmartFitnessService";
service MySmartFitness {
  // Receives date, sends steam of activities and their duration on the given
  // date
  // Server streaming RPC
  rpc ActivityTracking(google.protobuf.Timestamp) returns (stream Activity) {}
}

message Activity {
  string activity = 1;
  int32 steps = 2;
  int32 duration = 3;
}
