syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.mysmartgym";
option java_outer_classname = "SmartGymService";

package mysmartgym;

service MySmartGym {
  // Sends weight
  rpc WeightUpdate(Weight) returns (Empty) {}
  rpc ConsumedFoodStreaming(stream ConsumedFoodRequest)
      returns (stream NutrientsReply) {}
  rpc HeartTracking(stream HeartBeat) returns (stream WorkoutIntensity) {}
}

message Weight { float weight = 1; }

message Empty {}

message ConsumedFoodRequest {
  string food = 1;
  int32 quantity = 2;
}

// The response message containing the nutrients
message NutrientsReply { string message = 1; }

message HeartBeat { int32 pulse = 1; }
message WorkoutIntensity {
  int32 zone = 1;
  int32 hour = 2;
  int32 minutes = 3;
}
